tests/samples/positive/functions/if_else_all_paths_return.ax
module if_else_all_paths_return;

fn choose(flag: bool) -> i32 {
  if flag {
    return 1;
  } else {
    return 2;
  }
}

fn main() -> i32 {
  return choose(false) - 2;
}
