tests/samples/negative/types/module_member_namespace_conflict.ax
module module_member_namespace_conflict;

struct File {
    fd: i32;
}

fn File() -> i32 {
    return 1;
}

fn main() -> i32 {
    return File();
}
